--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2018.1.18
 chardet==3.0.4
 Django==2.0.2
+django-extensions==2.0.0
 flake8==3.5.0
 idna==2.6
 mccabe==0.6.1
@@ -10,4 +11,6 @@ pyflakes==1.6.0
 python-decouple==3.1
 pytz==2018.3
 requests==2.18.4
+six==1.11.0
+typing==3.6.4
 urllib3==1.22
