--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "metrics-graphics": "^2.13.0"
   }
 }
